--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,20 @@
     }
   },
   "installation": {
-    "version": "19.4.2"
-  }
+    "version": "19.4.2",
+    "plugins": {
+      "@nx/next": "19.4.2"
+    }
+  },
+  "plugins": [
+    {
+      "plugin": "@nx/next/plugin",
+      "options": {
+        "startTargetName": "start",
+        "buildTargetName": "build",
+        "devTargetName": "dev",
+        "serveStaticTargetName": "serve-static"
+      }
+    }
+  ]
 }
