--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@nx/next": "19.4.2"
+    "@nx/next": "19.4.2",
+    "@nx/vite": "^19.4.2",
+    "@nx/web": "19.4.2",
+    "@vitest/ui": "^1.3.1",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1"
   }
 }
