--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@nx/next": "19.4.2",
     "@nx/vite": "^19.4.2",
     "@nx/web": "19.4.2",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@vitest/ui": "^1.3.1",
+    "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
   }
