--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitest/ui": "^1.3.1",
+    "prettier": "^2.6.2",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
