--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@nx/next": "19.4.2",
     "@nx/vite": "^19.4.2",
     "@nx/web": "19.4.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
