--- a/package.json
+++ b/package.json
@@ -15,20 +15,28 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@nx/js": "19.4.2",
     "@nx/next": "19.4.2",
+    "@nx/react": "19.4.2",
     "@nx/vite": "^19.4.2",
     "@nx/web": "19.4.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/react": "15.0.6",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "jsdom": "~22.1.0",
     "prettier": "^2.6.2",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1"
   }
 }
