--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@nx/eslint": "19.4.2",
+    "@nx/eslint-plugin": "19.4.2",
     "@nx/js": "19.4.2",
     "@nx/next": "19.4.2",
     "@nx/react": "19.4.2",
@@ -28,10 +30,18 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
     "prettier": "^2.6.2",
     "typescript": "~5.4.2",
