--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nx/js": "19.4.2",
     "@nx/next": "19.4.2",
     "@nx/react": "19.4.2",
+    "@nx/storybook": "^19.4.2",
     "@nx/vite": "^19.4.2",
     "@nx/web": "19.4.2",
     "@swc-node/register": "~1.9.1",
@@ -44,6 +45,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
     "prettier": "^2.6.2",
+    "storybook": "^7.5.3",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
