build(mui-components): add `@mui/material` as dep

--- a/libs/mui-components/package.json
+++ b/libs/mui-components/package.json
@@ -10,5 +10,8 @@
       "require": "./index.js",
       "types": "./index.d.ts"
     }
+  },
+  "dependencies": {
+    "@mui/material": "5.16.1"
   }
 }
